# gateflow

./: .gitignore  LICENSE  NOTICE  README-zh.md  README.md
client/: go.mod  main.go
client/internal/cmd/: add_app.go  app.go  approve_app.go  disable_app.go  list.go  (+9 more)
client/v1/: service.pb.go  service_grpc.pb.go
gateflow/: .env.example  Cargo.toml  create_dir.sh  rpc-build.rs  script.hs
gateflow/migrations/: 20260218_init.sql  20260219_app_log.sql  20260311_app_policy.sql  20260312_health_latest.sql
gateflow/proto/v1/: service.proto
gateflow/src/: admin_rpc.rs  app_error.rs  config.rs  dataplane.rs  db.rs  domain.rs  health_udp.rs  lib.rs  main.rs  state.rs
gateflow/src/admin_rpc/: apps.rs  auth.rs  server.rs  types.rs
gateflow/src/app_error/: admin_rpc_error.rs  config_error.rs  dataplane_error.rs  db_error.rs  domain_error.rs  health_udp_error.rs  registry_error.rs  state_error.rs
gateflow/src/config/: load.rs  model.rs
gateflow/src/dataplane/: auth.rs  errors.rs  handler.rs  proxy.rs  rewrite.rs  route_match.rs  signing.rs
gateflow/src/db/: admin_op_log_rows.rs  admin_repo.rs  admin_user_rows.rs  app_rows.rs  apps_repo.rs  cli_session_rows.rs  health_repo.rs  health_rows.rs  pool.rs
gateflow/src/domain/: app.rs  health.rs
gateflow/src/health_udp/: listener.rs  parse.rs  store.rs
gateflow/src/registry/: load.rs  store.rs
gateflow/src/state/: app_state.rs  metrics.rs
gateflow/tests/: dataplane_chain_no_network.rs  health_udp_pipeline.rs
healthd/: go.mod  healthd.yaml  main.go  rebuild-rpc.sh
healthd/v1/: service.pb.go  service_grpc.pb.go
(+22 files in other folders)
