[package]
name = "gateflow"
version = "0.1.0"
edition = "2024"
build = "rpc-build.rs"

[dependencies]
chrono = { version = "0.4.43", features = ["clock"] }
tokio = { version = "1.49.0",features = ["full"]}
tonic = "0.14.2"
prost-types = "0.14.2"
tonic-prost = "0.14.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prost = "0.14.3"

# dataplane (HTTP server)
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# proxy client (forward to upstream)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

# rate limiting & maps
governor = "0.6"
dashmap = "5"

# database (Postgres)
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "chrono",
  "uuid",
  "json",
  "macros",
  "derive"
] }

# config + json (also used by UDP health report)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# signing (HMAC)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# ids
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0.18"
anyhow = "1.0.101"


[build-dependencies]
tonic-prost-build = "0.14.2"
